Sun Oct 19 13:00:14 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/odbc/unittests/Makefile.am
	* src/odbc/unittests/common.c
	* src/odbc/unittests/common.h
	- Accepted patch from John Anderson <panic@semiosix.com>
	- should close cursors on SQLEndTran
	* src/odbc/unittests/transaction.c added

Sat Oct 18 23:36:42 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* samples/test.pl permit command-line connection arguments
	* src/tds/encodings.pl src/tds/encodings.h 
	- explicitly number charset enumerations
	
Sat Oct 18 18:44:31 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/userguide.sgml minor copyedits
	* src/ctlib/ct.c fix bug sqsh trips on when no rows are returned. 
	- patch from Alex Kiesel <alex.kiesel@document-root.de>
	- see ML 18 Oct 2003 14:51:24 +0200
	
Thu Oct 16 23:02:05 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/encodings.h src/tds/encodings.pl:
	- define constant for every canonic charset

Wed Oct 08 21:23:03 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in:
	- test for wchar.h (some systems define EILSEQ here)
	- remove -ansi flag (enabling some required definitions)
	* include/tdsiconv.h: define EILSEQ if not like GNU-iconv
	* src/tds/read.c src/tds/token.c src/tds/write.c:
	- explicitly treat tds->iconv_info like an array

Tue Oct 07 22:05:48 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: avoid wrong dependency under Linux
	* freetds.spec.in doc/Makefile.am: fixes for RH9
	* src/odbc/odbc.c: remove warning, cleanup

Sun Oct  5 23:18:46 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* INSTALL.CVS added information about CVS tarballs.
	
Sun Oct 05 18:41:22 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in:
	- test for other socket functions
	- add "-ansi -Wno-long-long" if gcc for more warnings
	* include/tds.h: small fix for C98 compiler
	* src/apps/Makefile.am: try to fix Mac OS X problem
	* src/odbc/odbc_util.c src/odbc/odbc_util.h: